build: update next version

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@mdx-js/loader": "^1.6.19",
-    "@next/bundle-analyzer": "^10.0.7",
+    "@next/bundle-analyzer": "^12.0.10",
     "@reach/accordion": "^0.11.2",
     "@reach/dialog": "^0.11.2",
     "@reach/disclosure": "^0.11.2",
@@ -68,13 +68,14 @@
     "@stefanprobst/next-app-layout": "^1.0.1",
     "@stefanprobst/next-error-boundary": "^1.0.7",
     "@stefanprobst/next-page-metadata": "^1.0.7",
-    "@stefanprobst/next-svg": "^1.0.4",
+    "@stefanprobst/next-svg": "^3.0.3",
     "@stefanprobst/remark-excerpt": "^1.0.2",
     "@stefanprobst/remark-extract-toc": "^2.1.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
     "change-case": "^4.1.2",
     "clsx": "^1.1.1",
+    "file-loader": "^6.2.0",
     "final-form": "^4.20.1",
     "final-form-arrays": "^3.0.2",
     "final-form-focus": "^1.1.2",
@@ -86,7 +87,7 @@
     "jwt-decode": "^3.1.1",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
-    "next": "^10.0.7",
+    "next": "^12.0.10",
     "next-plugin-preval": "^1.2.1",
     "nodemailer": "^6.4.16",
     "nprogress": "^0.2.0",
@@ -109,13 +110,12 @@
     "remark-stringify": "^9.0.0",
     "strip-markdown": "^4.0.0",
     "tailwindcss": "^3.0.13",
-    "unified": "^9.2.0",
-    "yup": "^0.29.3"
+    "unified": "^9.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@next/eslint-plugin-next": "^10.0.7",
+    "@next/eslint-plugin-next": "^12.0.10",
     "@stefanprobst/commitlint-config": "^1.0.1",
     "@stefanprobst/eslint-config-next": "^1.0.9",
     "@stefanprobst/eslint-config-next-component": "^1.0.10",
