build: move next config to esm

--- a/package.json
+++ b/package.json
@@ -191,6 +191,11 @@
       "plugin:jest-dom/recommended",
       "plugin:testing-library/react"
     ],
+    "parserOptions": {
+      "extraFileExtensions": [
+        ".mjs"
+      ]
+    },
     "rules": {
       "@typescript-eslint/ban-types": "off",
       "@typescript-eslint/switch-exhaustiveness-check": "error"
