--- a/package.json
+++ b/package.json
@@ -4,28 +4,30 @@
   "private": true,
   "license": "Apache-2.0",
   "scripts": {
-    "analyze": "cross-env ANALYZE=true yarn build",
+    "analyze-bundle": "cross-env BUNDLE_ANALYZER='enabled' next build",
     "build": "next build",
-    "cms:dev": "netlify-cms-proxy-server",
-    "create:favicons": "ts-node -r tsconfig-paths/register -P scripts/tsconfig.json scripts/favicons",
-    "create:sshoc-client": "ts-node -r tsconfig-paths/register -P scripts/tsconfig.json scripts/sshoc-client",
-    "create:sitemap": "ts-node -r tsconfig-paths/register -P scripts/tsconfig.json scripts/sitemap",
-    "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "cms:server": "netlify-cms-proxy-server",
+    "generate:favicons": "ts-script scripts/favicons.ts",
     "dev": "next dev",
-    "export": "next export",
-    "format": "prettier . -l --ignore-path .gitignore",
-    "format:fix": "yarn format --write",
-    "lint": "eslint . --ignore-path .gitignore",
-    "lint:fix": "yarn lint --fix",
-    "prebuild": "rimraf .next && yarn create:favicons",
-    "preexport": "rimraf out",
+    "format": "prettier . --list-different --ignore-path .gitignore",
+    "format:fix": "yarn run format --write",
+    "lint:code": "eslint . --cache --cache-location .next/cache/eslint/ --ignore-path .gitignore",
+    "lint:code:fix": "yarn run lint:code --fix",
+    "postbuild": "yarn run generate:favicons",
+    "prepare": "simple-git-hooks || true",
     "start": "next start",
     "test": "jest --passWithNoTests",
-    "test:coverage": "yarn test --coverage"
+    "test:coverage": "yarn run test --coverage",
+    "type-check": "tsc -p ./tsconfig.json --noEmit",
+    "validate": "yarn run format && yarn run lint && yarn run type-check && yarn run test"
+  },
+  "engines": {
+    "node": "14.x||16.x",
+    "yarn": "1.x"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.2",
-    "@mdx-js/loader": "^1.6.19",
+    "@mdx-js/loader": "^2.0.0",
     "@next/bundle-analyzer": "^12.0.10",
     "@reach/accordion": "^0.11.2",
     "@reach/dialog": "^0.11.2",
@@ -68,148 +70,154 @@
     "@stefanprobst/next-app-layout": "^1.0.1",
     "@stefanprobst/next-error-boundary": "^1.0.7",
     "@stefanprobst/next-page-metadata": "^1.0.7",
+    "@stefanprobst/next-route-manifest": "^0.1.5",
     "@stefanprobst/next-svg": "^3.0.3",
-    "@stefanprobst/remark-excerpt": "^1.0.2",
+    "@stefanprobst/remark-excerpt": "^2.0.2",
     "@stefanprobst/remark-extract-toc": "^2.1.0",
-    "@tailwindcss/typography": "^0.5.0",
-    "autoprefixer": "^10.4.2",
+    "@stefanprobst/remark-extract-yaml-frontmatter": "^2.2.3",
+    "@stefanprobst/remark-smart-quotes": "^1.0.1",
+    "@stefanprobst/val-loader": "^4.0.0-4",
     "change-case": "^4.1.2",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
-    "final-form": "^4.20.1",
+    "final-form": "^4.20.6",
     "final-form-arrays": "^3.0.2",
     "final-form-focus": "^1.1.2",
     "final-form-set-field-data": "^1.0.2",
     "final-form-set-field-touched": "^1.0.1",
     "focus-visible": "^5.2.0",
-    "gray-matter": "^4.0.2",
     "highlight-words-core": "^1.2.2",
-    "jwt-decode": "^3.1.1",
+    "jwt-decode": "^3.1.2",
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "next": "^12.0.10",
-    "next-plugin-preval": "^1.2.1",
-    "nodemailer": "^6.4.16",
+    "nodemailer": "^6.7.2",
     "nprogress": "^0.2.0",
-    "postcss": "^8.4.5",
-    "postcss-focus-visible": "^5.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-final-form": "^6.5.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.8",
     "react-final-form-arrays": "^3.1.3",
-    "react-google-recaptcha": "^2.1.0",
-    "react-query": "^3.18.1",
-    "react-toastify": "^6.1.0",
-    "rehype-raw": "^5.0.0",
-    "rehype-stringify": "^8.0.0",
-    "remark-footnotes": "3.0.0",
-    "remark-gfm": "^1.0.0",
-    "remark-parse": "^9.0.0",
-    "remark-rehype": "^8.0.0",
-    "remark-slug": "^6.0.0",
-    "remark-stringify": "^9.0.0",
-    "strip-markdown": "^4.0.0",
-    "tailwindcss": "^3.0.13",
-    "unified": "^9.2.0"
+    "react-query": "^3.34.14",
+    "react-toastify": "^8.1.1",
+    "rehype-raw": "^6.1.1",
+    "rehype-stringify": "^9.0.3",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-slug": "^7.0.1",
+    "remark-stringify": "^10.0.2",
+    "strip-markdown": "^5.0.0",
+    "to-vfile": "^7.2.3",
+    "unified": "^10.1.1",
+    "vfile": "^5.3.0",
+    "vfile-matter": "^3.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@commitlint/cli": "^16.1.0",
+    "@jest/types": "^27.5.0",
     "@next/eslint-plugin-next": "^12.0.10",
-    "@stefanprobst/commitlint-config": "^1.0.1",
-    "@stefanprobst/eslint-config-next": "^1.0.9",
-    "@stefanprobst/eslint-config-next-component": "^1.0.10",
-    "@stefanprobst/favicons": "^1.0.6",
-    "@stefanprobst/next-sitemap": "^1.0.4",
-    "@stefanprobst/prettier-config": "^1.0.1",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.0",
-    "@types/final-form-focus": "^1.1.1",
+    "@stefanprobst/commitlint-config": "^1.0.2",
+    "@stefanprobst/eslint-config-next": "^5.0.2",
+    "@stefanprobst/favicons": "^2.0.3",
+    "@stefanprobst/prettier-config": "^2.0.1",
+    "@stefanprobst/stylelint-config": "^2.1.1",
+    "@stefanprobst/ts-script": "^1.0.1",
+    "@stefanprobst/tsconfig": "^1.1.1",
+    "@tailwindcss/typography": "^0.5.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/final-form-focus": "^1.1.2",
     "@types/final-form-set-field-data": "^1.0.0",
     "@types/final-form-set-field-touched": "^1.0.0",
-    "@types/highlight-words-core": "^1.2.0",
-    "@types/jest": "^26.0.15",
+    "@types/highlight-words-core": "^1.2.1",
     "@types/jwt-decode": "^3.1.0",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.set": "^4.3.6",
-    "@types/mdx-js__react": "^1.5.3",
-    "@types/node": "^14.14.6",
-    "@types/node-fetch": "^2.5.7",
-    "@types/nodemailer": "^6.4.0",
+    "@types/mdx": "^2.0.1",
+    "@types/node": "^17.0.15",
+    "@types/nodemailer": "^6.4.4",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^16.9.56",
-    "@types/react-google-recaptcha": "^2.1.0",
-    "@types/yup": "^0.29.9",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.0",
-    "eslint-plugin-jest-dom": "^3.2.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-testing-library": "^3.10.0",
-    "husky": "^4.3.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.1",
-    "msw": "^0.21.3",
-    "netlify-cms-proxy-server": "^1.3.6",
-    "node-fetch": "^2.6.1",
+    "@types/react": "^17.0.39",
+    "@types/webpack": "^5.28.0",
+    "autoprefixer": "^10.4.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.8.0",
+    "jest": "^27.5.0",
+    "lint-staged": "^12.3.3",
+    "msw": "^0.36.8",
+    "netlify-cms-proxy-server": "^1.3.23",
+    "postcss": "^8.4.6",
     "postcss-custom-media": "^8.0.0",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.3.5",
-    "utility-types": "^3.10.0",
-    "vfile-matter": "^3.0.0"
+    "postcss-focus-visible": "^6.0.4",
+    "prettier": "^2.5.1",
+    "simple-git-hooks": "^2.7.0",
+    "stylelint": "^14.3.0",
+    "tailwindcss": "^3.0.18",
+    "typescript": "^4.5.5",
+    "utility-types": "^3.10.0"
   },
-  "engines": {
-    "node": "14.x||16.x",
-    "yarn": "1.x"
-  },
-  "babel": {
-    "presets": [
-      "next/babel"
+  "browserslist": {
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ],
+    "production": [
+      ">=0.75%",
+      "not dead",
+      "not op_mini all"
     ]
   },
   "commitlint": {
-    "extends": [
-      "@stefanprobst/commitlint-config"
-    ]
+    "extends": "@stefanprobst/commitlint-config"
   },
   "eslintConfig": {
-    "extends": [
-      "@stefanprobst/eslint-config-next",
-      "plugin:jest-dom/recommended",
-      "plugin:testing-library/react"
+    "extends": "@stefanprobst/eslint-config-next",
+    "overrides": [
+      {
+        "files": [
+          "src/pages/**/*.page.tsx",
+          "src/pages/**/*.page.template.tsx"
+        ],
+        "rules": {
+          "@typescript-eslint/no-namespace": "off"
+        }
+      }
     ],
-    "parserOptions": {
-      "extraFileExtensions": [
-        ".mjs"
-      ]
-    },
-    "rules": {
-      "@typescript-eslint/ban-types": "off",
-      "@typescript-eslint/switch-exhaustiveness-check": "error"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "tsc && lint-staged"
-    }
+    "ignorePatterns": "public/mockServiceWorker.js"
   },
   "lint-staged": {
-    "*.(js|jsx|ts|tsx)": "eslint --cache --fix",
-    "*.(css|json|md|mdx)": "prettier --write"
+    "*.(js|mjs|ts|tsx)": [
+      "eslint --cache --cache-location .next/cache/eslint/ --fix",
+      "prettier --write"
+    ],
+    "*.css": [
+      "stylelint --cache --cache-location .next/cache/stylelint/ --fix",
+      "prettier --write"
+    ],
+    "*.(json|md|mdx)": "prettier --write"
   },
-  "prettier": "@stefanprobst/prettier-config"
+  "msw": {
+    "workerDirectory": "public"
+  },
+  "postcss": {
+    "plugins": {
+      "postcss-focus-visible": {},
+      "postcss-custom-media": {},
+      "tailwindcss/nesting": {},
+      "tailwindcss": {},
+      "autoprefixer": {}
+    }
+  },
+  "prettier": "@stefanprobst/prettier-config",
+  "simple-git-hooks": {
+    "commit-msg": "yarn commitlint --edit",
+    "pre-commit": "yarn lint-staged",
+    "pre-push": "yarn run validate"
+  },
+  "stylelint": {
+    "extends": "@stefanprobst/stylelint-config"
+  }
 }
