--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier . --list-different --ignore-path .gitignore",
     "format:fix": "yarn run format --write",
     "lint": "yarn run lint:code && yarn run lint:style",
+    "lint:fix": "yarn run lint:code:fix && yarn run lint:style:fix",
     "lint:code": "eslint . --cache --cache-location .next/cache/eslint/ --ignore-path .gitignore",
     "lint:code:fix": "yarn run lint:code --fix",
     "lint:style": "stylelint '**/*.css' --cache --cache-location .next/cache/stylelint/ --ignore-path .gitignore",
