--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev": "next dev",
     "format": "prettier . --list-different --ignore-path .gitignore",
     "format:fix": "yarn run format --write",
-    "lint": "yarn run lint:code && yarn run lint:style",
-    "lint:fix": "yarn run lint:code:fix && yarn run lint:style:fix",
+    "lint": "run-p lint:*",
+    "lint:fix": "run-p lint:*:fix",
     "lint:code": "eslint . --cache --cache-location .next/cache/eslint/ --ignore-path .gitignore",
     "lint:code:fix": "yarn run lint:code --fix",
     "lint:style": "stylelint '**/*.css' --cache --cache-location .next/cache/stylelint/ --ignore-path .gitignore",
@@ -152,6 +152,7 @@
     "lint-staged": "^12.3.3",
     "msw": "^0.36.8",
     "netlify-cms-proxy-server": "^1.3.23",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.6",
     "postcss-custom-media": "^8.0.0",
     "postcss-focus-visible": "^6.0.4",
