--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@mdx-js/loader": "^2.0.0",
+    "@mdx-js/mdx": "^2.0.0",
     "@next/bundle-analyzer": "^12.0.10",
     "@reach/accordion": "^0.11.2",
     "@reach/dialog": "^0.11.2",
