--- a/package.json
+++ b/package.json
@@ -75,15 +75,15 @@
     "@react-stately/tree": "^3.2.0",
     "@stefanprobst/log": "^1.0.2",
     "@stefanprobst/next-app-layout": "^1.0.1",
-    "@stefanprobst/next-error-boundary": "^3.0.2",
-    "@stefanprobst/next-page-metadata": "^2.0.5",
+    "@stefanprobst/next-error-boundary": "^3.0.2-legacy",
+    "@stefanprobst/next-page-metadata": "^2.0.5-legacy",
     "@stefanprobst/next-route-manifest": "^0.1.5",
     "@stefanprobst/next-svg": "^3.0.3",
     "@stefanprobst/rehype-extract-toc": "^2.1.3",
     "@stefanprobst/rehype-image-captions": "^1.1.0",
     "@stefanprobst/rehype-lists-with-aria-role": "^1.0.1",
     "@stefanprobst/rehype-next-image": "^1.0.0",
-    "@stefanprobst/rehype-next-links": "^2.0.1",
+    "@stefanprobst/rehype-next-links": "^2.0.2",
     "@stefanprobst/rehype-noreferrer-links": "^1.0.2",
     "@stefanprobst/remark-excerpt": "^2.0.2",
     "@stefanprobst/remark-extract-toc": "^2.1.0",
