--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,43 +1,25 @@
-variables:
-  DOCKER_HOST: tcp://docker:2375/
-  DOCKER_DRIVER: overlay2
-  DOCKER_TLS_CERTDIR: ''
-  # DOCKER_BUILDKIT: 1
-
-stages:
-  - build
-
-build:
-  stage: build
-  image: docker:latest
-  services:
-    - docker:dind
-  tags:
-    - cluster
+workflow:
   variables:
-    NEXT_PUBLIC_BASE_URL: $NEXT_PUBLIC_BASE_URL
-    NEXT_PUBLIC_SSHOC_API_BASE_URL: $NEXT_PUBLIC_SSHOC_API_BASE_URL
+    NEXT_PUBLIC_BASE_URL: https://sshoc-marketplace.acdh-dev.oeaw.ac.at
+    NEXT_PUBLIC_SSHOC_API_BASE_URL: https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at
+    GITLAB_ACCESS_TOKEN: $GITLAB_ACCESS_TOKEN
     NEXT_PUBLIC_GITLAB_BASE_URL: $NEXT_PUBLIC_GITLAB_BASE_URL
     NEXT_PUBLIC_GITLAB_REPOSITORY: $NEXT_PUBLIC_GITLAB_REPOSITORY
     NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH: $NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH
     NEXT_PUBLIC_GITLAB_APP_ID: $NEXT_PUBLIC_GITLAB_APP_ID
     NEXT_PUBLIC_MATOMO_BASE_URL: $NEXT_PUBLIC_MATOMO_BASE_URL
-    NEXT_PUBLIC_MATOMO_APP_ID: $NEXT_PUBLIC_MATOMO_APP_ID
-  before_script:
-    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-  script:
-    - docker pull $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG || docker pull $CI_REGISTRY_IMAGE:main ||
-      true
-    - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
-      --cache-from=$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG --cache-from=$CI_REGISTRY_IMAGE:main
-      --build-arg NEXT_PUBLIC_BASE_URL --build-arg NEXT_PUBLIC_SSHOC_API_BASE_URL --build-arg
-      NEXT_PUBLIC_GITLAB_BASE_URL --build-arg NEXT_PUBLIC_GITLAB_REPOSITORY --build-arg
-      NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH --build-arg NEXT_PUBLIC_GITLAB_APP_ID --build-arg
-      NEXT_PUBLIC_MATOMO_BASE_URL --build-arg NEXT_PUBLIC_MATOMO_APP_ID .
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
-    - docker tag $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
-    - docker push $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
-  only:
-    - develop
-    - stage
-    - main
+    NEXT_PUBLIC_MATOMO_APP_ID: 190
+  rules:
+    - if: $CI_COMMIT_REF_NAME == "main"
+      variables:
+        NEXT_PUBLIC_BASE_URL: https://marketplace.sshopencloud.eu
+        NEXT_PUBLIC_SSHOC_API_BASE_URL: https://marketplace-api.sshopencloud.eu
+        NEXT_PUBLIC_MATOMO_APP_ID: 179
+    - if: $CI_COMMIT_REF_NAME == "stage"
+      variables:
+        NEXT_PUBLIC_BASE_URL: https://sshoc-marketplace-stage.acdh-dev.oeaw.ac.at
+        NEXT_PUBLIC_SSHOC_API_BASE_URL: https://sshoc-marketplace-api-stage.acdh-dev.oeaw.ac.at
+        NEXT_PUBLIC_MATOMO_APP_ID: 198
+
+include:
+  - template: Auto-DevOps.gitlab-ci.yml
