--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,26 +1,28 @@
-include:
-  - template: Auto-DevOps.gitlab-ci.yml
+variables:
+  GITLAB_ACCESS_TOKEN: $GITLAB_ACCESS_TOKEN
+  NEXT_PUBLIC_GITLAB_BASE_URL: $NEXT_PUBLIC_GITLAB_BASE_URL
+  NEXT_PUBLIC_GITLAB_REPOSITORY: $NEXT_PUBLIC_GITLAB_REPOSITORY
+  NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH: $NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH
+  NEXT_PUBLIC_GITLAB_APP_ID: $NEXT_PUBLIC_GITLAB_APP_ID
+  NEXT_PUBLIC_MATOMO_BASE_URL: $NEXT_PUBLIC_MATOMO_BASE_URL
 
-build:
-  stage: build
-  variables:
-    NEXT_PUBLIC_BASE_URL: https://sshoc-marketplace.acdh-dev.oeaw.ac.at
-    NEXT_PUBLIC_SSHOC_API_BASE_URL: https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at
-    GITLAB_ACCESS_TOKEN: $GITLAB_ACCESS_TOKEN
-    NEXT_PUBLIC_GITLAB_BASE_URL: $NEXT_PUBLIC_GITLAB_BASE_URL
-    NEXT_PUBLIC_GITLAB_REPOSITORY: $NEXT_PUBLIC_GITLAB_REPOSITORY
-    NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH: $NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH
-    NEXT_PUBLIC_GITLAB_APP_ID: $NEXT_PUBLIC_GITLAB_APP_ID
-    NEXT_PUBLIC_MATOMO_BASE_URL: $NEXT_PUBLIC_MATOMO_BASE_URL
-    NEXT_PUBLIC_MATOMO_APP_ID: 190
+workflow:
   rules:
-    - if: $CI_COMMIT_REF_NAME == "main"
+    - if: $CI_COMMIT_REF_NAME == "develop"
       variables:
-        NEXT_PUBLIC_BASE_URL: https://marketplace.sshopencloud.eu
-        NEXT_PUBLIC_SSHOC_API_BASE_URL: https://marketplace-api.sshopencloud.eu
-        NEXT_PUBLIC_MATOMO_APP_ID: 179
+        NEXT_PUBLIC_BASE_URL: https://sshoc-marketplace.acdh-dev.oeaw.ac.at
+        NEXT_PUBLIC_SSHOC_API_BASE_URL: https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at
+        NEXT_PUBLIC_MATOMO_APP_ID: 190
     - if: $CI_COMMIT_REF_NAME == "stage"
       variables:
         NEXT_PUBLIC_BASE_URL: https://sshoc-marketplace-stage.acdh-dev.oeaw.ac.at
         NEXT_PUBLIC_SSHOC_API_BASE_URL: https://sshoc-marketplace-api-stage.acdh-dev.oeaw.ac.at
         NEXT_PUBLIC_MATOMO_APP_ID: 198
+    - if: $CI_COMMIT_REF_NAME == "main"
+      variables:
+        NEXT_PUBLIC_BASE_URL: https://marketplace.sshopencloud.eu
+        NEXT_PUBLIC_SSHOC_API_BASE_URL: https://marketplace-api.sshopencloud.eu
+        NEXT_PUBLIC_MATOMO_APP_ID: 179
+
+include:
+  - template: Auto-DevOps.gitlab-ci.yml
