--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,14 @@
-variables:
-  GITLAB_ACCESS_TOKEN: $GITLAB_ACCESS_TOKEN
-  NEXT_PUBLIC_GITLAB_BASE_URL: $NEXT_PUBLIC_GITLAB_BASE_URL
-  NEXT_PUBLIC_GITLAB_REPOSITORY: $NEXT_PUBLIC_GITLAB_REPOSITORY
-  NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH: $NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH
-  NEXT_PUBLIC_GITLAB_APP_ID: $NEXT_PUBLIC_GITLAB_APP_ID
-  NEXT_PUBLIC_MATOMO_BASE_URL: $NEXT_PUBLIC_MATOMO_BASE_URL
+include:
+  - template: Auto-DevOps.gitlab-ci.yml
 
-workflow:
+build:
+  variables:
+    GITLAB_ACCESS_TOKEN: $GITLAB_ACCESS_TOKEN
+    NEXT_PUBLIC_GITLAB_BASE_URL: $NEXT_PUBLIC_GITLAB_BASE_URL
+    NEXT_PUBLIC_GITLAB_REPOSITORY: $NEXT_PUBLIC_GITLAB_REPOSITORY
+    NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH: $NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH
+    NEXT_PUBLIC_GITLAB_APP_ID: $NEXT_PUBLIC_GITLAB_APP_ID
+    NEXT_PUBLIC_MATOMO_BASE_URL: $NEXT_PUBLIC_MATOMO_BASE_URL
   rules:
     - if: $CI_COMMIT_REF_NAME == "develop"
       variables:
@@ -23,7 +25,4 @@ workflow:
         NEXT_PUBLIC_BASE_URL: https://marketplace.sshopencloud.eu
         NEXT_PUBLIC_SSHOC_API_BASE_URL: https://marketplace-api.sshopencloud.eu
         NEXT_PUBLIC_MATOMO_APP_ID: 179
-    - when: always
-
-include:
-  - template: Auto-DevOps.gitlab-ci.yml
+    - when: on_success
