--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,17 +12,17 @@ build:
   rules:
     - if: $CI_COMMIT_REF_NAME == "develop"
       variables:
-        NEXT_PUBLIC_BASE_URL: https://sshoc-marketplace.acdh-dev.oeaw.ac.at
-        NEXT_PUBLIC_SSHOC_API_BASE_URL: https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at
-        NEXT_PUBLIC_MATOMO_APP_ID: 190
+        NEXT_PUBLIC_BASE_URL: 'https://sshoc-marketplace.acdh-dev.oeaw.ac.at'
+        NEXT_PUBLIC_SSHOC_API_BASE_URL: 'https://sshoc-marketplace-api.acdh-dev.oeaw.ac.at'
+        NEXT_PUBLIC_MATOMO_APP_ID: '190'
     - if: $CI_COMMIT_REF_NAME == "stage"
       variables:
-        NEXT_PUBLIC_BASE_URL: https://sshoc-marketplace-stage.acdh-dev.oeaw.ac.at
-        NEXT_PUBLIC_SSHOC_API_BASE_URL: https://sshoc-marketplace-api-stage.acdh-dev.oeaw.ac.at
-        NEXT_PUBLIC_MATOMO_APP_ID: 198
+        NEXT_PUBLIC_BASE_URL: 'https://sshoc-marketplace-stage.acdh-dev.oeaw.ac.at'
+        NEXT_PUBLIC_SSHOC_API_BASE_URL: 'https://sshoc-marketplace-api-stage.acdh-dev.oeaw.ac.at'
+        NEXT_PUBLIC_MATOMO_APP_ID: '198'
     - if: $CI_COMMIT_REF_NAME == "main"
       variables:
-        NEXT_PUBLIC_BASE_URL: https://marketplace.sshopencloud.eu
-        NEXT_PUBLIC_SSHOC_API_BASE_URL: https://marketplace-api.sshopencloud.eu
-        NEXT_PUBLIC_MATOMO_APP_ID: 179
+        NEXT_PUBLIC_BASE_URL: 'https://marketplace.sshopencloud.eu'
+        NEXT_PUBLIC_SSHOC_API_BASE_URL: 'https://marketplace-api.sshopencloud.eu'
+        NEXT_PUBLIC_MATOMO_APP_ID: '179'
     - when: on_success
