--- a/.env.production.local.example
+++ b/.env.production.local.example
@@ -10,6 +10,8 @@
 
 # Last updated timestamps
 # GITLAB_ACCESS_TOKEN=
+# NEXT_PUBLIC_GITLAB_PROJECT_ID=
+# NEXT_PUBLIC_GITLAB_REPOSITORY_CURRENT_BRANCH=
 # OAuth2 implicit grant flow for CMS
 # NEXT_PUBLIC_GITLAB_BASE_URL=
 # NEXT_PUBLIC_GITLAB_REPOSITORY=
