--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,15 +3,17 @@ include:
 
 # All variables are passed into the Docker build context via `AUTO_DEVOPS_BUILD_IMAGE_EXTRA_ARGS`,
 # which is set in the GitLab UI:
-# `--build-arg NEXT_PUBLIC_BASE_URL --build-arg NEXT_PUBLIC_SSHOC_API_BASE_URL --build-arg GITLAB_ACCESS_TOKEN --build-arg NEXT_PUBLIC_GITLAB_BASE_URL --build-arg NEXT_PUBLIC_GITLAB_REPOSITORY --build-arg NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH --build-arg NEXT_PUBLIC_GITLAB_APP_ID --build-arg NEXT_PUBLIC_MATOMO_BASE_URL --build-arg NEXT_PUBLIC_MATOMO_APP_ID`.
+# `--build-arg NEXT_PUBLIC_BASE_URL --build-arg NEXT_PUBLIC_SSHOC_API_BASE_URL --build-arg GITLAB_ACCESS_TOKEN --build-arg NEXT_PUBLIC_GITLAB_PROJECT_ID --build-arg NEXT_PUBLIC_GITLAB_REPOSITORY_CURRENT_BRANCH --build-arg NEXT_PUBLIC_GITLAB_BASE_URL --build-arg NEXT_PUBLIC_GITLAB_REPOSITORY --build-arg NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH --build-arg NEXT_PUBLIC_GITLAB_APP_ID --build-arg NEXT_PUBLIC_MATOMO_BASE_URL --build-arg NEXT_PUBLIC_MATOMO_APP_ID`.
 build:
   variables:
     GITLAB_ACCESS_TOKEN: $GITLAB_ACCESS_TOKEN
+    NEXT_PUBLIC_GITLAB_PROJECT_ID: $NEXT_PUBLIC_GITLAB_PROJECT_ID
     NEXT_PUBLIC_GITLAB_BASE_URL: $NEXT_PUBLIC_GITLAB_BASE_URL
     NEXT_PUBLIC_GITLAB_REPOSITORY: $NEXT_PUBLIC_GITLAB_REPOSITORY
     NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH: $NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH
     NEXT_PUBLIC_GITLAB_APP_ID: $NEXT_PUBLIC_GITLAB_APP_ID
     NEXT_PUBLIC_MATOMO_BASE_URL: $NEXT_PUBLIC_MATOMO_BASE_URL
+    NEXT_PUBLIC_GITLAB_REPOSITORY_CURRENT_BRANCH: $CI_COMMIT_REF_NAME
   rules:
     - if: $CI_COMMIT_REF_NAME == "develop"
       variables:
