--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "format:fix": "yarn run format --write",
     "generate:favicons": "ts-script scripts/generate-favicons.ts",
     "generate:route-manifest": "ts-script scripts/generate-route-manifest.ts",
-    "lint": "run-p lint:*",
+    "lint": "run-p lint:*:check",
     "lint:fix": "run-p lint:*:fix",
-    "lint:code": "next lint --dir . --ignore-path .gitignore",
-    "lint:code:fix": "yarn run lint:code --fix",
-    "lint:md": "remark . --ext md --quiet --frail",
-    "lint:md:fix": "yarn run lint:md --output",
-    "lint:mdx": "remark . --ext mdx --use mdx --quiet --frail",
-    "lint:mdx:fix": "yarn run lint:mdx --output",
-    "lint:style": "stylelint '**/*.css' --cache --cache-location .next/cache/stylelint/ --ignore-path .gitignore",
-    "lint:style:fix": "yarn run lint:style --fix",
+    "lint:code:check": "next lint --dir . --ignore-path .gitignore",
+    "lint:code:fix": "yarn run lint:code:check --fix",
+    "lint:md:check": "remark . --ext md --quiet --frail",
+    "lint:md:fix": "yarn run lint:md:check --output",
+    "lint:mdx:check": "remark . --ext mdx --use mdx --quiet --frail",
+    "lint:mdx:fix": "yarn run lint:mdx:check --output",
+    "lint:styles:check": "stylelint '**/*.css' --cache --cache-location .next/cache/stylelint/ --ignore-path .gitignore",
+    "lint:styles:fix": "yarn run lint:styles:check --fix",
     "msw:update": "yarn msw init public",
     "postbuild": "yarn run generate:favicons",
     "prebuild": "yarn run generate:route-manifest",
@@ -93,20 +93,20 @@
     "@react-stately/tooltip": "^3.0.6",
     "@react-stately/tree": "^3.2.1",
     "@react-stately/virtualizer": "^3.1.7-alpha.0",
-    "@stefanprobst/assert": "^1.0.2",
-    "@stefanprobst/capitalize": "^1.0.1",
-    "@stefanprobst/is-absolute-url": "^1.0.1",
-    "@stefanprobst/is-nonempty-array": "^1.0.0",
-    "@stefanprobst/is-nonempty-string": "^1.0.0",
-    "@stefanprobst/log": "^1.0.2",
+    "@stefanprobst/assert": "^1.0.3",
+    "@stefanprobst/capitalize": "^1.0.2",
+    "@stefanprobst/is-absolute-url": "^1.0.2",
+    "@stefanprobst/is-nonempty-array": "^1.0.1",
+    "@stefanprobst/is-nonempty-string": "^1.0.1",
+    "@stefanprobst/log": "^1.0.3",
     "@stefanprobst/next-error-boundary": "legacy",
     "@stefanprobst/next-i18n": "legacy",
     "@stefanprobst/next-page-metadata": "legacy",
     "@stefanprobst/next-route-manifest": "^0.1.5",
     "@stefanprobst/next-svg": "^4.2.1",
     "@stefanprobst/next-theme": "legacy",
-    "@stefanprobst/pick": "^1.0.2",
-    "@stefanprobst/range": "^1.1.0",
+    "@stefanprobst/pick": "^1.0.3",
+    "@stefanprobst/range": "^1.1.1",
     "@stefanprobst/rehype-extract-toc": "^2.1.3",
     "@stefanprobst/rehype-fragment-links": "^1.0.1",
     "@stefanprobst/rehype-image-captions": "^1.1.0",
@@ -118,7 +118,7 @@
     "@stefanprobst/remark-extract-yaml-frontmatter": "^2.2.3",
     "@stefanprobst/remark-mdx-page": "^3.0.1",
     "@stefanprobst/remark-smart-quotes": "^1.0.1",
-    "@stefanprobst/request": "^0.1.9",
+    "@stefanprobst/request": "^0.1.10",
     "@stefanprobst/val-loader": "^4.0.0-4",
     "change-case": "^4.1.2",
     "clsx": "^1.1.1",
