--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "types": ["cypress", "@testing-library/cypress"]
+    "types": ["cypress", "@testing-library/cypress", "cypress-real-events"]
   },
   "include": ["../node_modules/cypress", "**/*.ts", "**/*.tsx"],
   "exclude": []
