--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "stories:build:docs": "yarn run stories:build --docs",
     "stories:dev": "start-storybook --config-dir stories --port 6006 --no-open",
     "stories:dev:docs": "yarn run stories:dev --docs",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --config ./test/jest.config.mjs",
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --config ./test/jest.config.js",
     "test:ci": "yarn run test --ci",
     "test:coverage": "yarn run test --coverage",
     "test:watch": "yarn run test --watch",
     "test:e2e": "start-server-and-test start :3000 cypress",
     "test:e2e:headless": "start-server-and-test start :3000 cypress:headless",
+    "test:e2e:dev": "cross-env NEXT_PUBLIC_API_MOCKING=disabled start-server-and-test dev :3000 cypress",
+    "test:e2e:dev:headless": "cross-env NEXT_PUBLIC_API_MOCKING=disabled start-server-and-test dev :3000 cypress:headless",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "validate": "yarn run format && yarn run lint && yarn run typecheck && yarn run test"
   },
@@ -51,7 +53,7 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^2.1.0",
-    "@next/bundle-analyzer": "^12.1.1-canary.16",
+    "@next/bundle-analyzer": "^12.1.2",
     "@react-aria/accordion": "^3.0.0-alpha.3",
     "@react-aria/autocomplete": "^3.0.0-alpha.2",
     "@react-aria/breadcrumbs": "^3.1.6",
@@ -135,7 +137,7 @@
     "jwt-decode": "^3.1.2",
     "mdast-util-to-string": "^3.1.0",
     "netlify-cms-app": "^2.15.64",
-    "next": "^12.1.1-canary.16",
+    "next": "^12.1.2",
     "next-theme": "^0.1.5",
     "nodemailer": "^6.7.2",
     "nprogress": "^0.2.0",
@@ -145,7 +147,7 @@
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.8",
     "react-final-form-arrays": "^3.1.3",
-    "react-query": "^3.34.16",
+    "react-query": "^3.34.18",
     "react-toastify": "8.1.1",
     "rehype-react": "^7.0.4",
     "rehype-slug": "^5.0.1",
@@ -164,15 +166,15 @@
     "use-composed-ref": "^1.2.1",
     "vfile": "^5.3.0",
     "vfile-matter": "^3.0.1",
-    "zod": "^3.14.2"
+    "zod": "^3.14.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/cz-commitlint": "^16.2.1",
-    "@faker-js/faker": "^6.0.0",
+    "@faker-js/faker": "^6.1.1",
     "@jest/types": "^27.5.1",
     "@mswjs/data": "^0.9.2",
-    "@next/eslint-plugin-next": "^12.1.1-canary.16",
+    "@next/eslint-plugin-next": "^12.1.2",
     "@react-types/button": "^3.4.2",
     "@react-types/checkbox": "^3.2.4",
     "@react-types/combobox": "^3.2.2",
@@ -204,7 +206,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.3",
     "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^14.0.0-beta.8",
+    "@testing-library/user-event": "^14.0.0",
     "@types/final-form-focus": "^1.1.2",
     "@types/final-form-set-field-data": "^1.0.0",
     "@types/final-form-set-field-touched": "^1.0.0",
@@ -219,10 +221,12 @@
     "autoprefixer": "^10.4.2",
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
-    "cypress": "^9.2.1",
+    "cypress": "^9.5.3",
+    "cypress-real-events": "^1.7.0",
     "eslint": "^8.9.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-storybook": "^0.5.7",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
     "jest-watch-typeahead": "^1.0.0",
