--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@stefanprobst/tsconfig",
   "compilerOptions": {
+    "target": "es2019",
     "noUncheckedIndexedAccess": true,
     // "exactOptionalPropertyTypes": true,
     "baseUrl": ".",
