fix: fix form section heading level, temporarily validate on blur not on change

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,8 @@ src/lib/core/navigation/routes.ts
 
 # storybook
 storybook-static/
+
+# cypress
+cypress/downloads/
+cypress/screenshots/
+cypress/videos/
