--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,10 @@ build:
     NEXT_PUBLIC_GITLAB_APP_ID: $NEXT_PUBLIC_GITLAB_APP_ID
     NEXT_PUBLIC_MATOMO_BASE_URL: $NEXT_PUBLIC_MATOMO_BASE_URL
     NEXT_PUBLIC_GITLAB_REPOSITORY_CURRENT_BRANCH: $CI_COMMIT_REF_NAME
+    REVALIDATION_TOKEN: $REVALIDATION_TOKEN
+    SMTP_SERVER: $SMTP_SERVER
+    SMTP_PORT: $SMTP_PORT
+    SSHOC_CONTACT_EMAIL_ADDRESS: $SSHOC_CONTACT_EMAIL_ADDRESS
   rules:
     - if: $CI_COMMIT_REF_NAME == "develop"
       variables:
