build: figure out how to pass env to container

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,10 +14,10 @@ build:
     NEXT_PUBLIC_GITLAB_APP_ID: $NEXT_PUBLIC_GITLAB_APP_ID
     NEXT_PUBLIC_MATOMO_BASE_URL: $NEXT_PUBLIC_MATOMO_BASE_URL
     NEXT_PUBLIC_GITLAB_REPOSITORY_CURRENT_BRANCH: $CI_COMMIT_REF_NAME
-    REVALIDATION_TOKEN: $REVALIDATION_TOKEN
-    SMTP_SERVER: $SMTP_SERVER
-    SMTP_PORT: $SMTP_PORT
-    SSHOC_CONTACT_EMAIL_ADDRESS: $SSHOC_CONTACT_EMAIL_ADDRESS
+    REVALIDATION_TOKEN: $K8S_SECRET_REVALIDATION_TOKEN
+    SMTP_SERVER: $K8S_SECRET_SMTP_SERVER
+    SMTP_PORT: $K8S_SECRET_SMTP_PORT
+    SSHOC_CONTACT_EMAIL_ADDRESS: $K8S_SECRET_SSHOC_CONTACT_EMAIL_ADDRESS
   rules:
     - if: $CI_COMMIT_REF_NAME == "develop"
       variables:
