--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^2.1.0",
-    "@next/bundle-analyzer": "^12.1.2",
+    "@next/bundle-analyzer": "^12.1.5-canary.2",
     "@react-aria/accordion": "^3.0.0-alpha.3",
     "@react-aria/autocomplete": "^3.0.0-alpha.2",
     "@react-aria/breadcrumbs": "^3.1.6",
@@ -137,7 +137,7 @@
     "jwt-decode": "^3.1.2",
     "mdast-util-to-string": "^3.1.0",
     "netlify-cms-app": "^2.15.64",
-    "next": "^12.1.2",
+    "next": "^12.1.5-canary.2",
     "next-theme": "^0.1.5",
     "nodemailer": "^6.7.2",
     "nprogress": "^0.2.0",
@@ -174,7 +174,7 @@
     "@faker-js/faker": "^6.1.1",
     "@jest/types": "^27.5.1",
     "@mswjs/data": "^0.9.2",
-    "@next/eslint-plugin-next": "^12.1.2",
+    "@next/eslint-plugin-next": "^12.1.5-canary.2",
     "@react-types/button": "^3.4.2",
     "@react-types/checkbox": "^3.2.4",
     "@react-types/combobox": "^3.2.2",
