chore: add google id

--- a/.env.production.local.example
+++ b/.env.production.local.example
@@ -18,9 +18,13 @@
 # NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH=
 # NEXT_PUBLIC_GITLAB_APP_ID=
 
+
 # Matomo Analytics
 # NEXT_PUBLIC_MATOMO_BASE_URL=
 # NEXT_PUBLIC_MATOMO_APP_ID=
+
+# Google Site Verification
+# NEXT_PUBLIC_GOOGLE_SITE_ID=
 
 # Contact email
 # SMTP_SERVER=
