--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,8 +3,10 @@
     "dbaeumer.vscode-eslint",
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
+    "jounqin.vscode-mdx",
     "mikestead.dotenv",
     "orta.vscode-jest",
+    "shelex.vscode-cy-helper",
     "stylelint.vscode-stylelint"
   ]
 }
