--- a/package.json
+++ b/package.json
@@ -148,7 +148,7 @@
     "react-final-form": "^6.5.8",
     "react-final-form-arrays": "^3.1.3",
     "react-query": "^3.34.18",
-    "react-toastify": "^9.0.0-rc-2",
+    "react-toastify": "8.1.1",
     "rehype-react": "^7.0.4",
     "rehype-slug": "^5.0.1",
     "rehype-stringify": "^9.0.2",
