--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,4 +35,5 @@ build:
         NEXT_PUBLIC_SSHOC_API_BASE_URL: 'https://marketplace-api.sshopencloud.eu'
         NEXT_PUBLIC_MATOMO_APP_ID: '179'
         NEXT_PUBLIC_GOOGLE_SITE_ID: 'nGy-4NymUoG2gvqsocWhF8A7TY9wVh5bAVIrPMNeC8M'
+        NEXT_PUBLIC_GITLAB_APP_ID: '21942eaff17c3fc7edddc9357bdad978bb0067fce4992be7dc42e07a5fd3be96'
     - when: on_success
