build: move config from gitlab to github

--- a/.env.production.local.example
+++ b/.env.production.local.example
@@ -2,22 +2,18 @@
 
 # NEXT_PUBLIC_SSHOC_API_BASE_URL=
 
+# Next.js on-demand ISR
 # REVALIDATION_TOKEN=
 
-# NEXT_PUBLIC_API_MOCKING=disabled
+# NEXT_PUBLIC_MOCK_API=disabled
 
 # NEXT_PUBLIC_LOCAL_CMS_BACKEND=disabled
 
-# Last updated timestamps
-# GITLAB_ACCESS_TOKEN=
-# NEXT_PUBLIC_GITLAB_PROJECT_ID=
-# NEXT_PUBLIC_GITLAB_REPOSITORY_CURRENT_BRANCH=
-# OAuth2 implicit grant flow for CMS
-# NEXT_PUBLIC_GITLAB_BASE_URL=
-# NEXT_PUBLIC_GITLAB_REPOSITORY=
-# NEXT_PUBLIC_GITLAB_REPOSITORY_BRANCH=
-# NEXT_PUBLIC_GITLAB_APP_ID=
-
+# OAuth2 flow for CMS
+# NEXT_PUBLIC_GITHUB_REPOSITORY=
+# NEXT_PUBLIC_GITHUB_REPOSITORY_BRANCH=
+# GITHUB_CLIENT_ID=
+# GITHUB_CLIENT_SECRET=
 
 # Matomo Analytics
 # NEXT_PUBLIC_MATOMO_BASE_URL=
