--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -48,16 +48,16 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            NEXT_PUBLIC_BASE_URL="https://marketplace.sshopencloud.eu"
-            NEXT_PUBLIC_SSHOC_API_BASE_URL="https://marketplace-api.sshopencloud.eu"
-            NEXT_PUBLIC_MOCK_API="disabled"
-            NEXT_PUBLIC_BOTS="enabled"
-            NEXT_PUBLIC_MATOMO_BASE_URL="https://matomo.acdh.oeaw.ac.at"
-            NEXT_PUBLIC_MATOMO_APP_ID="179"
-            NEXT_PUBLIC_GOOGLE_SITE_ID="nGy-4NymUoG2gvqsocWhF8A7TY9wVh5bAVIrPMNeC8M"
-            NEXT_PUBLIC_LOCAL_CMS_BACKEND="disabled"
-            NEXT_PUBLIC_GITHUB_REPOSITORY="sshoc/sshoc-marketplace-frontend"
-            NEXT_PUBLIC_GITHUB_REPOSITORY_BRANCH="main"
+            NEXT_PUBLIC_BASE_URL=https://marketplace.sshopencloud.eu
+            NEXT_PUBLIC_SSHOC_API_BASE_URL=https://marketplace-api.sshopencloud.eu
+            NEXT_PUBLIC_MOCK_API=disabled
+            NEXT_PUBLIC_BOTS=enabled
+            NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at
+            NEXT_PUBLIC_MATOMO_APP_ID=179
+            NEXT_PUBLIC_GOOGLE_SITE_ID=nGy-4NymUoG2gvqsocWhF8A7TY9wVh5bAVIrPMNeC8M
+            NEXT_PUBLIC_LOCAL_CMS_BACKEND=disabled
+            NEXT_PUBLIC_GITHUB_REPOSITORY=sshoc/sshoc-marketplace-frontend
+            NEXT_PUBLIC_GITHUB_REPOSITORY_BRANCH=main
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
