build: add rancher project id

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -65,5 +65,5 @@ jobs:
         uses: acdh-oeaw/deploy-action@v1
         with:
           token: ${{ secrets.RANCHER_API_TOKEN }}
-          project: c-zdbh8:p-
+          project: c-zdbh8:p-tk5b7
           deployment: sshoc:sshoc-marketplace-frontend
