--- a/.env.production.local.example
+++ b/.env.production.local.example
@@ -12,8 +12,15 @@
 # OAuth2 flow for CMS
 # NEXT_PUBLIC_GITHUB_REPOSITORY=
 # NEXT_PUBLIC_GITHUB_REPOSITORY_BRANCH=
-# GITHUB_CLIENT_ID=
-# GITHUB_CLIENT_SECRET=
+# OAUTH_PROVIDER=github
+# GitHub OAuth app client id.
+# OAUTH_CLIENT_ID=
+# GitHub OAuth app client secret.
+# OAUTH_CLIENT_SECRET=
+# GitHub OAuth app callback URL.
+# OAUTH_REDIRECT_URL=https://example.com/api/oauth/callback
+# Deployed website's base URL.
+# OAUTH_ALLOWED_ORIGIN=https://example.com
 
 # Matomo Analytics
 # NEXT_PUBLIC_MATOMO_BASE_URL=
