--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "@stefanprobst/is-nonempty-array": "^1.0.1",
     "@stefanprobst/is-nonempty-string": "^1.0.1",
     "@stefanprobst/log": "^1.0.3",
-    "@stefanprobst/netlify-cms-oauth-client": "^0.1.2",
+    "@stefanprobst/netlify-cms-oauth-client": "^0.1.3",
     "@stefanprobst/next-error-boundary": "legacy",
     "@stefanprobst/next-i18n": "legacy",
     "@stefanprobst/next-page-metadata": "legacy",
@@ -381,5 +381,8 @@
         }
       ]
     }
+  },
+  "volta": {
+    "node": "16.19.0"
   }
 }
