--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -52,7 +52,7 @@ jobs:
             NEXT_PUBLIC_SSHOC_API_BASE_URL=https://marketplace-api.sshopencloud.eu
             NEXT_PUBLIC_MOCK_API=disabled
             NEXT_PUBLIC_BOTS=enabled
-            NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at
+            NEXT_PUBLIC_MATOMO_BASE_URL=https://matomo.acdh.oeaw.ac.at/
             NEXT_PUBLIC_MATOMO_APP_ID=179
             NEXT_PUBLIC_GOOGLE_SITE_ID=nGy-4NymUoG2gvqsocWhF8A7TY9wVh5bAVIrPMNeC8M
             NEXT_PUBLIC_LOCAL_CMS_BACKEND=disabled
