--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "sshoc-marketplace-frontend",
-  "version": "1.0.0",
   "private": true,
   "license": "Apache-2.0",
   "scripts": {
@@ -46,9 +45,9 @@
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "validate": "yarn run format && yarn run lint && yarn run typecheck && yarn run test"
   },
-  "packageManager": "yarn@1.22.17",
+  "packageManager": "yarn@1.22.22",
   "engines": {
-    "node": "14.x||16.x",
+    "node": "18.x",
     "yarn": "1.x"
   },
   "dependencies": {
@@ -373,8 +372,5 @@
         }
       ]
     }
-  },
-  "volta": {
-    "node": "16.19.0"
   }
 }
