--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "sshoc-marketplace-frontend",
   "private": true,
   "license": "Apache-2.0",
+  "engines": {
+    "node": "22.x",
+    "pnpm": "9.x"
+  },
+  "packageManager": "pnpm@9.12.2",
   "scripts": {
     "analyze-bundle": "cross-env BUNDLE_ANALYZER=enabled next build",
     "build": "next build",
@@ -10,45 +15,39 @@
     "cypress": "cypress open --config-file cypress/cypress.config.json",
     "cypress:headless": "cypress run --config-file cypress/cypress.config.json",
     "dev": "next dev",
-    "docker:dev": "docker run --rm --init -u `id -u`:`id -g` -v `pwd`:/app -w /app -p 3000:3000 node:14-slim yarn dev",
     "format": "prettier . \"!**/*.mdx\" --list-different --ignore-path .gitignore",
-    "format:fix": "yarn run format --write",
+    "format:fix": "pnpm run format --write",
     "generate:favicons": "ts-script scripts/generate-favicons.ts",
     "generate:route-manifest": "ts-script scripts/generate-route-manifest.ts",
-    "lint": "run-p lint:*:check",
-    "lint:fix": "run-p lint:*:fix",
+    "lint": "run-p \"lint:*:check\"",
+    "lint:fix": "run-p \"lint:*:fix\"",
     "lint:code:check": "next lint --dir . --ignore-path .gitignore",
-    "lint:code:fix": "yarn run lint:code:check --fix",
+    "lint:code:fix": "pnpm run lint:code:check --fix",
     "lint:md:check": "remark . --ext md --quiet --frail",
-    "lint:md:fix": "yarn run lint:md:check --output",
+    "lint:md:fix": "pnpm run lint:md:check --output",
     "lint:mdx:check": "remark . --ext mdx --use mdx --quiet --frail",
-    "lint:mdx:fix": "yarn run lint:mdx:check --output",
-    "lint:styles:check": "stylelint '**/*.css' --cache --cache-location .next/cache/stylelint/ --ignore-path .gitignore",
-    "lint:styles:fix": "yarn run lint:styles:check --fix",
-    "postbuild": "yarn run generate:favicons",
+    "lint:mdx:fix": "pnpm run lint:mdx:check --output",
+    "lint:styles:check": "stylelint \"**/*.css\" --cache --cache-location .next/cache/stylelint/ --ignore-path .gitignore",
+    "lint:styles:fix": "pnpm run lint:styles:check --fix",
+    "postbuild": "pnpm run generate:favicons",
     "postinstall": "patch-package",
-    "prebuild": "yarn run generate:route-manifest",
+    "prebuild": "pnpm run generate:route-manifest",
     "prepare": "simple-git-hooks || true",
     "start": "next start",
     "stories:build": "build-storybook --config-dir stories --quiet",
-    "stories:build:docs": "yarn run stories:build --docs",
+    "stories:build:docs": "pnpm run stories:build --docs",
     "stories:dev": "start-storybook --config-dir stories --port 6006 --no-open",
-    "stories:dev:docs": "yarn run stories:dev --docs",
-    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' jest --config ./test/jest.config.js",
-    "test:ci": "yarn run test --ci",
-    "test:coverage": "yarn run test --coverage",
-    "test:watch": "yarn run test --watch",
+    "stories:dev:docs": "pnpm run stories:dev --docs",
+    "test": "cross-env NODE_OPTIONS=\"--experimental-vm-modules\" jest --config ./test/jest.config.js",
+    "test:ci": "pnpm run test --ci",
+    "test:coverage": "pnpm run test --coverage",
+    "test:watch": "pnpm run test --watch",
     "test:e2e": "start-server-and-test start :3000 cypress",
     "test:e2e:headless": "start-server-and-test start :3000 cypress:headless",
     "test:e2e:dev": "cross-env NEXT_PUBLIC_MOCK_API=disabled start-server-and-test dev :3000 cypress",
     "test:e2e:dev:headless": "cross-env NEXT_PUBLIC_MOCK_API=disabled start-server-and-test dev :3000 cypress:headless",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "validate": "yarn run format && yarn run lint && yarn run typecheck && yarn run test"
-  },
-  "packageManager": "yarn@1.22.22",
-  "engines": {
-    "node": "22.x",
-    "yarn": "1.x"
+    "validate": "pnpm run format && pnpm run lint && pnpm run typecheck && pnpm run test"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.1.0",
@@ -161,6 +160,7 @@
     "sharp": "^0.30.3",
     "shiki": "^0.10.0",
     "strip-markdown": "^5.0.0",
+    "to-vfile": "7",
     "unified": "^10.1.1",
     "unist-util-visit": "^4.1.0",
     "use-composed-ref": "^1.2.1",
@@ -359,8 +359,8 @@
     ]
   },
   "simple-git-hooks": {
-    "commit-msg": "yarn commitlint --edit",
-    "pre-commit": "yarn lint-staged"
+    "commit-msg": "pnpm exec commitlint --edit",
+    "pre-commit": "pnpm exec lint-staged"
   },
   "stylelint": {
     "extends": "@stefanprobst/stylelint-config",
