--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 /.pnp
 .pnp.js
 
+# logs
+*.log
+
 # testing
 /coverage
 
@@ -15,21 +18,12 @@
 
 # misc
 .DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# vercel
-.vercel
 
 # caches
 .eslintcache
