--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
-  "name": "sshoc-marketplace-frontend",
+  "name": "@sshoc/sshoc-marketplace-frontend",
   "private": true,
   "license": "Apache-2.0",
+  "engines": {
+    "node": "22.x",
+    "yarn": "1.x"
+  },
+  "packageManager": "yarn@1.22.22",
   "scripts": {
     "analyze-bundle": "cross-env BUNDLE_ANALYZER=enabled next build",
     "build": "next build",
@@ -26,11 +31,6 @@
     "start": "next start",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "validate": "yarn run format && yarn run lint && yarn run typecheck"
-  },
-  "packageManager": "yarn@1.22.22",
-  "engines": {
-    "node": "22.x",
-    "yarn": "1.x"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.1.0",
