--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "mdast-util-to-string": "^3.1.0",
     "netlify-cms-app": "^2.15.72",
     "next": "^13.5.8",
+    "next-intl": "^3.26.5",
     "nodemailer": "^6.7.2",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
