--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"node": "22.x",
 		"pnpm": "10.x"
 	},
-	"packageManager": "pnpm@10.6.5",
+	"packageManager": "pnpm@10.7.0",
 	"scripts": {
 		"analyze": "BUNDLE_ANALYZER=\"enabled\" next build --no-lint",
 		"build": "next build",
@@ -37,9 +37,13 @@
 		"validate": "run-p format:check lint:check types:check test test:e2e"
 	},
 	"dependencies": {
+		"@acdh-oeaw/keystatic-lib": "^0.6.1",
 		"@acdh-oeaw/lib": "^0.3.1",
+		"@acdh-oeaw/mdx-lib": "^0.1.3",
 		"@acdh-oeaw/style-variants": "^0.1.0",
 		"@acdh-oeaw/validate-env": "^0.0.3",
+		"@keystatic/core": "^0.5.46",
+		"@keystatic/next": "^5.0.4",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/api-logs": "^0.57.2",
 		"@opentelemetry/instrumentation": "^0.57.2",
