--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 	},
 	"packageManager": "pnpm@10.7.1",
 	"scripts": {
-		"analyze": "BUNDLE_ANALYZER=\"enabled\" next build --no-lint",
-		"build": "next build",
-		"dev": "next dev",
+		"analyze": "BUNDLE_ANALYZER=\"enabled\" next build --no-lint --turbopack",
+		"build": "next build --turbopack",
+		"dev": "next dev --turbopack",
 		"dev:email-service:down": "docker compose --env-file=./.env.local down --volumes",
 		"dev:email-service:up": "docker compose --env-file=./.env.local up --detach",
 		"format:check": "prettier . \"!./@(content|public)/**\" --cache --cache-location ./.prettiercache --check",
@@ -27,7 +27,7 @@
 		"preinstall": "npx only-allow pnpm",
 		"prepare": "run-s setup generate:i18n-message-types generate:api-client",
 		"setup": "is-ci || simple-git-hooks",
-		"start": "next start",
+		"start": "next start --turbopack",
 		"test": "exit 0",
 		"test:e2e": "playwright test",
 		"test:e2e:codegen": "playwright codegen",
