--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
 		"node": "22.x",
 		"pnpm": "10.x"
 	},
-	"packageManager": "pnpm@10.7.1",
+	"packageManager": "pnpm@10.8.1",
 	"scripts": {
-		"analyze": "BUNDLE_ANALYZER=\"enabled\" next build --no-lint --turbopack",
-		"build": "next build --turbopack",
-		"dev": "next dev --turbopack",
+		"analyze": "BUNDLE_ANALYZER=\"enabled\" next build --no-lint",
+		"build": "next build",
+		"dev": "next dev",
 		"dev:email-service:down": "docker compose --env-file=./.env.local down --volumes",
 		"dev:email-service:up": "docker compose --env-file=./.env.local up --detach",
-		"format:check": "prettier . \"!./@(content|public)/**\" --cache --cache-location ./.prettiercache --check",
+		"format:check": "prettier . --cache --cache-location ./.prettiercache --check",
 		"format:fix": "pnpm run format:check --write",
 		"generate:api-client": "dotenv -c -- tsx ./scripts/generate-api-client.ts",
 		"generate:i18n-message-types": "tsx ./scripts/generate-i18n-message-types.ts",
@@ -27,7 +27,7 @@
 		"preinstall": "npx only-allow pnpm",
 		"prepare": "run-s setup generate:i18n-message-types generate:api-client",
 		"setup": "is-ci || simple-git-hooks",
-		"start": "next start --turbopack",
+		"start": "next start",
 		"test": "exit 0",
 		"test:e2e": "playwright test",
 		"test:e2e:codegen": "playwright codegen",
@@ -43,19 +43,19 @@
 		"@acdh-oeaw/mdx-lib": "^0.1.3",
 		"@acdh-oeaw/style-variants": "^0.1.0",
 		"@acdh-oeaw/validate-env": "^0.0.3",
-		"@keystar/ui": "^0.7.18",
-		"@keystatic/core": "^0.5.46",
+		"@keystar/ui": "^0.7.19",
+		"@keystatic/core": "^0.5.47",
 		"@keystatic/next": "^5.0.4",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/api-logs": "^0.200.0",
 		"@opentelemetry/instrumentation": "^0.200.0",
 		"@opentelemetry/sdk-logs": "^0.200.0",
-		"@react-aria/utils": "^3.28.1",
-		"@sentry/nextjs": "^9.11.0",
-		"@shikijs/rehype": "^3.2.1",
+		"@react-aria/utils": "^3.28.2",
+		"@sentry/nextjs": "^9.12.0",
+		"@shikijs/rehype": "^3.2.2",
 		"@sindresorhus/slugify": "^2.2.1",
 		"@valibot/i18n": "^1.0.0",
-		"@vercel/otel": "^1.10.4",
+		"@vercel/otel": "^1.11.0",
 		"client-only": "^0.0.1",
 		"fast-glob": "^3.3.3",
 		"image-dimensions": "^2.3.0",
@@ -65,13 +65,13 @@
 		"mdast-util-to-markdown": "^2.1.2",
 		"next": "canary",
 		"next-intl": "^4.0.2",
-		"nodemailer": "^6.10.0",
+		"nodemailer": "^6.10.1",
 		"react": "^19.1.0",
-		"react-aria": "^3.38.1",
-		"react-aria-components": "^1.7.1",
+		"react-aria": "^3.39.0",
+		"react-aria-components": "^1.8.0",
 		"react-dom": "^19.1.0",
 		"react-schemaorg": "^2.0.0",
-		"react-stately": "^3.36.1",
+		"react-stately": "^3.37.0",
 		"rehype-slug": "^6.0.0",
 		"remark-frontmatter": "^5.0.0",
 		"remark-gfm": "^4.0.1",
@@ -80,7 +80,7 @@
 		"remark-smartypants": "^3.0.2",
 		"server-only": "^0.0.1",
 		"sharp": "^0.33.5",
-		"shiki": "^3.2.1",
+		"shiki": "^3.2.2",
 		"strip-markdown": "^6.0.0",
 		"swr": "^2.3.3",
 		"unified": "^11.0.5",
@@ -99,27 +99,27 @@
 		"@next/eslint-plugin-next": "canary",
 		"@playwright/test": "^1.51.1",
 		"@react-aria/optimize-locales-plugin": "^1.1.4",
-		"@react-types/shared": "^3.28.0",
-		"@tailwindcss/postcss": "^4.1.3",
+		"@react-types/shared": "^3.29.0",
+		"@tailwindcss/postcss": "^4.1.4",
 		"@types/hast": "^3.0.4",
 		"@types/mdast": "^4.0.4",
 		"@types/mdx": "^2.0.13",
-		"@types/node": "^22.14.0",
+		"@types/node": "^22.14.1",
 		"@types/nodemailer": "^6.4.17",
-		"@types/react": "^19.1.0",
-		"@types/react-dom": "^19.1.1",
+		"@types/react": "^19.1.2",
+		"@types/react-dom": "^19.1.2",
 		"axe-core": "^4.10.3",
 		"axe-playwright": "^2.1.0",
 		"ci-info": "^4.2.0",
-		"dotenv": "^16.4.7",
+		"dotenv": "^16.5.0",
 		"dotenv-cli": "^8.0.0",
 		"dotenv-expand": "^12.0.1",
 		"eslint": "^9.24.0",
 		"eslint-config-flat-gitignore": "^2.1.0",
-		"eslint-plugin-check-file": "^3.1.0",
+		"eslint-plugin-check-file": "^3.2.0",
 		"globals": "^16.0.0",
 		"is-ci": "^4.1.0",
-		"lint-staged": "^15.5.0",
+		"lint-staged": "^15.5.1",
 		"npm-run-all2": "^7.0.2",
 		"openapi-typescript": "^7.6.1",
 		"postcss": "^8.5.3",
@@ -128,22 +128,11 @@
 		"schema-dts": "^1.1.5",
 		"simple-git-hooks": "^2.12.1",
 		"stylelint": "^16.18.0",
-		"tailwindcss": "^4.1.3",
+		"tailwindcss": "^4.1.4",
 		"tailwindcss-react-aria-components": "^2.0.0",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.3",
-		"typescript-eslint": "^8.29.0"
-	},
-	"pnpm": {
-		"onlyBuiltDependencies": [
-			"@sentry/cli",
-			"esbuild",
-			"sharp",
-			"simple-git-hooks"
-		],
-		"patchedDependencies": {
-			"next": "patches/next.patch"
-		}
+		"typescript-eslint": "^8.30.1"
 	},
 	"browserslist": {
 		"development": [
@@ -166,7 +155,7 @@
 			"stylelint --cache --fix",
 			"prettier --cache --cache-location ./.prettiercache --write"
 		],
-		"*.!(css|js|ts|tsx),!./@(content|public)/**": "prettier --cache --cache-location ./.prettiercache --ignore-unknown --write"
+		"*.!(css|js|ts|tsx)": "prettier --cache --cache-location ./.prettiercache --ignore-unknown --write"
 	},
 	"postcss": {
 		"plugins": {
