--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
 		"@playwright/test": "^1.52.0",
 		"@react-aria/optimize-locales-plugin": "^1.1.4",
 		"@tailwindcss/postcss": "^4.1.4",
+		"@tailwindcss/typography": "^0.5.16",
 		"@types/hast": "^3.0.4",
 		"@types/mdast": "^4.0.4",
 		"@types/mdx": "^2.0.13",
