--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,9 @@
 onlyBuiltDependencies:
-  - "@sentry/cli"
+  - '@sentry/cli'
   - esbuild
   - sharp
   - simple-git-hooks
+  - unrs-resolver
 
 patchedDependencies:
-  next: "patches/next.patch"
+  next: patches/next.patch
