--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,6 +12,8 @@
 				"lokalise.i18n-ally",
 				"mikestead.dotenv",
 				"ms-playwright.playwright",
+				"mtxr.sqltools",
+				"mtxr.sqltools-driver-pg",
 				"stylelint.vscode-stylelint",
 				"unifiedjs.vscode-mdx"
 			]
