--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,8 @@
 		"lokalise.i18n-ally",
 		"mikestead.dotenv",
 		"ms-playwright.playwright",
+		"mtxr.sqltools",
+		"mtxr.sqltools-driver-pg",
 		"stylelint.vscode-stylelint",
 		"unifiedjs.vscode-mdx"
 	]
