--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,17 @@
 	"stylelint.enable": true,
 	"stylelint.snippet": ["css", "postcss", "tailwindcss"],
 	"stylelint.validate": ["css", "postcss", "tailwindcss"],
+	"sqltools.connections": [
+		{
+			"previewLimit": 50,
+			"server": "localhost",
+			"port": 5432,
+			"driver": "PostgreSQL",
+			"name": "sshoc",
+			"database": "marketplace_db",
+			"username": "marketplace"
+		}
+	],
 	"tailwindCSS.experimental.classRegex": [
 		["cn\\(([^)]*)\\)", "(?:'|\"|`)([^']*)(?:'|\"|`)"],
 		["styles\\(([^)]*)\\)", "[\"'`]([^\"'`]*).*?[\"'`]"]
